# gautogui

./: .gitignore  README.md  meson.build  meson_options.txt
docs/: DESIGN.md  api.rst  conf.py  development.rst  examples.rst  index.rst  install.rst  platforms.rst  requirements.txt
examples/: meson.build  monitor.c  monitor.nut  monitor.py  monitor.vala  notepad-demo.nut
include/gautogui/: gautogui-controller.h  gautogui.h
src/: gautogui-backend-dummy.c  gautogui-backend-win32.c  gautogui-backend-x11.c  gautogui-backend.h  gautogui-controller-private.h  gautogui-controller.c  meson.build
tests/: api-test.c  meson.build
